syntax = "proto3";

package messenger;

service Messenger {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}


message SendMessageRequest {
    string sender = 1;
    string recipient = 2;
    string content = 3;
}

message SendMessageResponse {
    bool success = 1;
}

message GetMessagesRequest {
    string chat_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetMessagesResponse {
    repeated Message messages = 1;
}

message Message {
    string sender = 1;
    string content = 2;
    int64 timestamp = 3;
}
